# EncodersPanel

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  MCP23017_cfg.h  MCP23017_drv.c  MCP23017_drv.h  Makefile_tmpl  README.md
Config/: STM32F103C8_FLASH.ld
SOFT/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  project.yml  toolchain.cmake
SOFT/codebase/main_fw/application/: app.c  app.h  main.c
SOFT/codebase/main_fw/hardware/bsp/: bsp.c  bsp.h
SOFT/codebase/main_fw/hardware/bsp/Driver_buttons/: buttons_drv.c  buttons_drv.h  buttons_drv_cfg.h
SOFT/codebase/main_fw/hardware/bsp/Driver_control/: control_data.c  control_drv.c  control_drv.h  control_drv_cfg.h
SOFT/codebase/main_fw/hardware/bsp/Driver_encoder/: encoder_drv.c  encoder_drv.h  encoder_drv_cfg.h
SOFT/codebase/main_fw/hardware/bsp/Driver_mcp23017/: MCP23017_cfg.h  MCP23017_drv.c
SOFT/codebase/main_fw/hardware/system/: STM32F103C8_FLASH.ld  general_macros.h  general_types.h
SOFT/codebase/main_fw/middleware/Circular_Buffer/Latest/: circ_buffer.h
SOFT/codebase/main_fw/middleware/Common/inc/: crc.h
SOFT/codebase/main_fw/middleware/Common/scr/: crc.c
SOFT/codebase/main_fw/middleware/async_xmodem-master/: xmodem_server.c
SOFT/codebase/main_fw/middleware/upload_config_service/: upl_cfg_service.c  upl_cfg_service.h
SOFT/scripts/: crc.py  panel_cfg.json  upload_cfg.py
SOFT/utils/: gen_templ_cfg.py
SOFT/utils/common/: common.cfg
codebase/main_fw/application/: main.c
include/: Init.h  MCP23017_cfg.h  MCP23017_drv.h  stm32f10x_conf.h
source/: Init.c  MCP23017_drv.c  main.c  system_stm32f10x.c
